@@ -9,7 +9,7 @@
   <packaging>pom</packaging>
   
   <properties>
-    <java.version>17</java.version>
+    <java.version>19</java.version>
     <spring-cloud.version>2022.0.0</spring-cloud.version>
     <spring-boot.version>3.0.1</spring-boot.version>
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -26,12 +26,17 @@
     <testcontainers.version>1.18.0</testcontainers.version>
     <springdoc.openapi.version>2.0.2</springdoc.openapi.version>
     <maven-flatten.version>1.4.1</maven-flatten.version>
+    <okhttp.version>4.10.0</okhttp.version>
+    <spring-jooq.version>3.0.6</spring-jooq.version>
+    <liquibase.version>4.21.1</liquibase.version>
   </properties>
   
   <modules>
     <module>bot</module>
     <module>link-parser</module>
     <module>scrapper</module>
+    <module>shared</module>
+    <module>scrapper-jooq</module>
   </modules>
   
   <dependencies>
@@ -85,6 +90,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>  
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-vault-config</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -103,6 +113,7 @@
       <artifactId>junit-jupiter-params</artifactId>
     </dependency>
     
+
   </dependencies>
   
   <dependencyManagement>
@@ -132,6 +143,19 @@
         <scope>import</scope>
       </dependency>
       
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>mockwebserver</artifactId>
+        <version>${okhttp.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jooq</artifactId>
+        <version>${spring-jooq.version}</version>
+      </dependency>
+      
     </dependencies>
   </dependencyManagement>
   
@@ -155,6 +179,8 @@
                 <artifactId>lombok</artifactId>
               </exclude>
             </excludes>
+
+            <jvmArguments>--enable-preview</jvmArguments>
             
           </configuration>
           
@@ -169,17 +195,6 @@
               </configuration>
             </execution>
           </executions>
-        </plugin>
-        
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
-          <configuration>
-            <release>${java.version}</release>
-            <encoding>${build.sourceEncoding}</encoding>
-            <parameters>true</parameters>
-          </configuration>
         </plugin>
         
         <plugin>
@@ -219,6 +234,17 @@
     
 
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <release>${java.version}</release>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
